--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 </body>
 </html>
